# cis2450-flightdelaycast

./: .gitignore  README.md  pyproject.toml  requirements-app.txt  requirements.txt
.streamlit/: config.toml
dashboard/: app.py  manual_weather_numeric.py  prediction_explain.py  style.css  weather_policy.py
models/: baseline_best_params.json  baseline_features.json  baseline_logistic.joblib  baseline_metrics.json  hist_gradient_boosting.joblib  hist_gradient_boosting_best_params.json  hist_gradient_boosting_features.json  hist_gradient_boosting_metrics.json  hist_gradient_boosting_threshold.json  random_forest_best_params.json  random_forest_feature_selection.json  random_forest_importances.json  random_forest_metrics.json  random_forest_threshold.json  tree_models_comparison.json
reports/: eda_summary.md
scripts/: build_processed.py  download_airports.py  download_bts.py  run_eda.py  train_baseline.py  train_tree_models.py
src/flightdelaycast/: __init__.py  cleaning.py  config.py  meteostat_daily.py  model_features.py  route_distance.py  weather_destination.py  weather_origin.py  wrangle.py
tests/: test_route_distance.py  test_wrangle.py
tests/fixtures/: airports_sample.csv
tests/fixtures/bts/: bts_sample.csv
